--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107273432-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments)};
+        function gtag(){dataLayer.push(arguments)}
         gtag('js', new Date());
 
         gtag('config', 'UA-107273432-1');
@@ -454,7 +454,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div id="sendmessage">Your message has been sent. Thank you!</div>
                     <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
+                    <form action="contactform/send_email.php"  method="post" name="contactform" role="form" class="contactForm">
                         <div class="form-group">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
                                    data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
@@ -477,7 +477,7 @@
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-lg">Send Message</button>
+                            <input type="submit" value="Submit">
                         </div>
                     </form>
                 </div>
@@ -520,9 +520,9 @@
 <script src="js/jquery.isotope.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
-<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+<!--<script src="https://maps.google.com/maps/api/js?sensor=true"></script>-->
 <script src="js/main.js"></script>
-<script src="contactform/contactform.js"></script>
+<!--<script src="contactform/contactform.js"></script>-->
 
 </body>
 </html>
