Contact Us form changes#2

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required"
+                            <textarea class="form-control" name="message" rows="5" required
                                       data-msg="Please write something for us" placeholder="Message"></textarea>
                             <div class="help-block with-errors"></div>
                         </div>
