--- a/index.html
+++ b/index.html
@@ -452,10 +452,7 @@
             </div>
             <div class="row contact-wrap">
                 <div class="col-md-8 col-md-offset-2">
-
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-
-                    <form id="contactForm" role="form" class="shake">
+                    <form id="contactForm" role="form" class="shake" data-toggle="validator" >
                         <div class="form-group">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
                                    data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
@@ -480,6 +477,8 @@
                         <div class="text-center">
                             <button type="submit" id="form-submit" class="btn btn-success btn-lg">Send Message</button>
                         </div>
+                        <div id="msgSubmit" class="h3 text-center hidden"></div>
+                        <div class="clearfix"></div>
                     </form>
                 </div>
             </div><!--/.row-->
