--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             </div>
             <div class="row contact-wrap">
                 <div class="col-md-8 col-md-offset-2">
-                    <form id="contactForm" role="form" class="shake" data-toggle="validator" >
+                    <form action="contactform/send_email.php" method="post" id="contactForm" role="form" class="shake" data-toggle="validator" >
                         <div class="form-group">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
                                    data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
