--- a/index.html
+++ b/index.html
@@ -474,7 +474,11 @@
                             <div class="help-block with-errors"></div>
                         </div>
 
-                        <div class="text-center">
+                        <div class="form-group">
+                            <div class="g-recaptcha" data-sitekey="6Lc3zzIUAAAAAFb8u7BduhpeiZrXxnsO_QSoysut"></div>
+                        </div>
+
+                        <div class="form-group">
                             <button type="submit" id="form-submit" class="btn btn-success btn-lg">Send Message</button>
                         </div>
                         <div id="msgSubmit" class="h3 text-center hidden"></div>
@@ -485,6 +489,7 @@
         </div><!--/.container-->
     </div><!--/#contact-page-->
 </section>
+
 
 <footer id="footer" class="midnight-blue">
     <div class="container">
@@ -525,5 +530,6 @@
 <script type="text/javascript" src="contactform/validator.min.js"></script>
 <script src="contactform/contactform.js"></script>
 
+<script src='https://www.google.com/recaptcha/api.js'></script>
 </body>
 </html>
