Contact Us form changes#12

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="text-center">
                             <button type="submit" id="form-submit" class="btn btn-success btn-lg">Send Message</button>
                         </div>
                         <div id="msgSubmit" class="h3 text-center hidden"></div>
