--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <link href="css/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
+    <script type="text/javascript"> //<![CDATA[
+    var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+    document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+    //]]>
+    </script>
+
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -489,26 +496,31 @@
 
 <footer id="footer" class="midnight-blue">
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="text-center">
-                    <a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="text-center">
+                        <a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
+                    </div>
+                    &copy; CyNET LLC. All Rights Reserved.
                 </div>
-                &copy; CyNET LLC. All Rights Reserved.
-            </div>
 
-            <div class="top-bar">
-                <div class="col-lg-12">
-                    <div class="social">
-                        <ul class="social-share">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        </ul>
+                <div class="top-bar">
+                    <div class="col-lg-12">
+                        <div class="social">
+                            <ul class="social-share">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 col-md-offset-3">
+                            <script language="JavaScript" type="text/javascript">
+                                TrustLogo("https://www.cynetllc.com/images/comodo_secure_seal_113x59_transp.png", "CL1", "none");
+                            </script>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </footer><!--/#footer-->
 
@@ -525,5 +537,6 @@
 <script src="js/main.js"></script>
 <script type="text/javascript" src="contactform/validator.min.js"></script>
 <script src="contactform/contactform.js"></script>
+
 </body>
 </html>
