Carousel images updates

--- a/index.html
+++ b/index.html
@@ -75,17 +75,25 @@
                     <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-slider" data-slide-to="1"></li>
                     <li data-target="#carousel-slider" data-slide-to="2"></li>
+                    <li data-target="#carousel-slider" data-slide-to="3"></li>
+                    <li data-target="#carousel-slider" data-slide-to="4"></li>
                 </ol>
 
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="images/slide1.jpg" class="img-responsive" alt="">
+                        <img src="images/slide1.png" class="img-responsive" alt="">
                     </div>
                     <div class="item">
-                        <img src="images/slide2.jpg" class="img-responsive" alt="">
+                        <img src="images/slide2.png" class="img-responsive" alt="">
                     </div>
                     <div class="item">
-                        <img src="images/slide3.jpg" class="img-responsive" alt="">
+                        <img src="images/slide3.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="images/slide4.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="images/slide5.png" class="img-responsive" alt="">
                     </div>
                 </div>
 
@@ -109,7 +117,7 @@
                 <hr>
                 <p class="lead">
                     The objective of CyNET LLC is to secure network of government agencies and large
-                    corporate IT customers. CyNET LLC security solution consists of SDN-based centralized
+                    corporate IT customers. CyNET LLC security solution consists of Software Defined Networking (SDN) based centralized
                     security vulnerability and attack detection, Machine Learning and AI based security
                     analysis framework to correlate threat information from entire cloud networks, and
                     apply SDN-based security countermeasures to pro-actively deploy countermeasures.
