--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <li><a href="#products">Products</a></li>
                     <li><a href="#features">Industries</a></li>
                     <li><a href="#customers">Customers</a></li>
+                    <li><a href="#news">News</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -423,6 +424,7 @@
     </div>
 </section>
 
+<br>
 
 <div id="customers">
     <div class="container">
@@ -452,6 +454,37 @@
                 <img src="images/customers/customers4.png" alt="Customer 2 logo" class="img-responsive">
             </div>
 
+        </div>
+
+    </div>
+    <br>
+</div>
+
+<br><br>
+
+<div id="news">
+    <div class="container">
+        <div class="row">
+            <div class="center">
+                <div class="col-md-6 col-md-offset-3">
+                    <h2>News</h2>
+                    <hr>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="center">
+                <!--Client logos should be within a 120px wide by 60px height image canvas-->
+                <div class="col-xs-6 col-md-3 col-md-offset-2">
+                    <img src="images/news1.jpg" alt="News 1" class="img-responsive">
+                </div>
+                <div class="col-xs-6 col-md-3 col-md-offset-2">
+                    <img src="images/news2.jpg" alt="News 2" class="img-responsive">
+                </div>
+            </div>
         </div>
 
     </div>
